# pico-7segment

./: CMakeLists.txt  Pico 7 segment reordered bits.fzz  README.adoc  seven-segment-wiring.fzz  seven_segment.c
seven_segment_library/: CMakeLists.txt  seven_segment_library.c  seven_segment_library.h  seven_segment_library.pio
